--- a/IJA/src/ija/ija2017/ui/mainWindow.fxml
+++ b/IJA/src/ija/ija2017/ui/mainWindow.fxml
@@ -51,17 +51,17 @@
                                     <Label alignment="CENTER" layoutX="79.0" layoutY="31.0" maxHeight="500.0" maxWidth="500.0" text="Defense" textFill="WHITE" />
                                  </children></Pane>
                               <Rectangle fill="#3d3d3d" height="2.0" layoutX="10.0" layoutY="84.0" stroke="#3d3d3d" strokeType="INSIDE" width="200.0" />
-                              <Pane layoutX="10.0" layoutY="198.0" prefHeight="200.0" prefWidth="200.0">
+                              <Pane layoutX="10.0" layoutY="198.0" onMouseClicked="#createBlockHealing" prefHeight="200.0" prefWidth="200.0">
                                  <children>
-                                    <Label alignment="CENTER" layoutX="80.0" layoutY="31.0" maxHeight="500.0" maxWidth="500.0" onMouseClicked="#createBlockHealing" text="Healing" textFill="WHITE" />
+                                    <Label alignment="CENTER" layoutX="80.0" layoutY="31.0" maxHeight="500.0" maxWidth="500.0" text="Healing" textFill="WHITE" />
                                  </children></Pane>
                               <Rectangle fill="#3d3d3d" height="2.0" layoutX="10.0" layoutY="160.0" stroke="#3d3d3d" strokeType="INSIDE" width="200.0" />
-                              <Pane layoutX="10.0" layoutY="260.0" prefHeight="200.0" prefWidth="200.0">
+                              <Pane layoutX="10.0" layoutY="260.0" onMouseClicked="#createBlockTraining" prefHeight="200.0" prefWidth="200.0">
                                  <children>
                                     <Label alignment="CENTER" layoutX="78.0" layoutY="31.0" maxHeight="500.0" maxWidth="500.0" onMouseClicked="#createBlockTraining" text="Training" textFill="WHITE" />
                                  </children></Pane>
                               <Rectangle fill="#3d3d3d" height="2.0" layoutX="10.0" layoutY="236.0" stroke="#3d3d3d" strokeType="INSIDE" width="200.0" />
-                              <Pane layoutX="10.0" layoutY="292.0" prefHeight="200.0" prefWidth="200.0">
+                              <Pane layoutX="10.0" layoutY="292.0" onMouseClicked="#createBlockWeaponUpgrade" prefHeight="200.0" prefWidth="200.0">
                                  <children>
                                     <Label alignment="CENTER" layoutX="53.0" layoutY="31.0" maxHeight="500.0" maxWidth="500.0" onMouseClicked="#createBlockWeaponUpgrade" text="Weapon Upgrade" textFill="WHITE" />
                                  </children></Pane>
