--- a/IJA/src/ija/ija2017/ui/mainWindow.fxml
+++ b/IJA/src/ija/ija2017/ui/mainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -79,7 +80,12 @@
                   </HBox>
                   <VBox fx:id="mainView" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <AnchorPane fx:id="mainViewPane" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                        <AnchorPane fx:id="mainViewPane" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="startButton" layoutX="71.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#runScheme" text="Start" />
+                              <Button fx:id="stepButton" layoutX="121.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#stepScheme" text="Step" />
+                              <Button fx:id="calculateButton" layoutX="14.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#calculateScheme" text="Check" />
+                           </children></AnchorPane>
                      </children></VBox>
                </children>
             </HBox>
