Loading blockies Files works

--- a/IJA/src/ija/ija2017/ui/mainWindow.fxml
+++ b/IJA/src/ija/ija2017/ui/mainWindow.fxml
@@ -85,6 +85,7 @@
                               <Button fx:id="startButton" layoutX="71.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#runScheme" text="Start" />
                               <Button fx:id="stepButton" layoutX="121.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#stepScheme" text="Step" />
                               <Button fx:id="calculateButton" layoutX="14.0" layoutY="406.0" mnemonicParsing="false" onMouseClicked="#calculateScheme" text="Check" />
+                              <Button fx:id="deleteSchemeButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#deleteScheme" text="Delete scheme" />
                            </children></AnchorPane>
                      </children></VBox>
                </children>
